Chakra example check

--- a/examples/with-chakra-ui/.mirrorful/theme.scss
+++ b/examples/with-chakra-ui/.mirrorful/theme.scss
@@ -1,69 +1,70 @@
-$color-lizard green: #48BB78;
-$color-lizard green-50: #b8e4ca;
-$color-lizard green-100: #a1dcba;
-$color-lizard green-200: #8bd4a9;
-$color-lizard green-300: #75cc99;
-$color-lizard green-400: #5ec388;
-$color-lizard green-500: #48bb78;
-$color-lizard green-600: #3ea66a;
-$color-lizard green-700: #36905b;
-$color-lizard green-800: #2d7a4d;
-$color-lizard green-900: #25643f;
-$color-hot pink: #ED64A6;
-$color-hot pink-50: #fdedf5;
-$color-hot pink-100: #fad2e5;
-$color-hot pink-200: #f7b6d5;
-$color-hot pink-300: #f39bc5;
-$color-hot pink-400: #f07fb6;
-$color-hot pink-500: #ed64a6;
-$color-hot pink-600: #ea4996;
-$color-hot pink-700: #e72d86;
-$color-hot pink-800: #dc1a77;
-$color-hot pink-900: #c01668;
-$color-cool teal: #38B2AC;
-$color-cool teal-50: #a1e2de;
-$color-cool teal-100: #8adad6;
-$color-cool teal-200: #73d3ce;
-$color-cool teal-300: #5cccc6;
-$color-cool teal-400: #44c4be;
-$color-cool teal-500: #38b2ac;
-$color-cool teal-600: #319b95;
-$color-cool teal-700: #29837f;
-$color-cool teal-800: #226c69;
-$color-cool teal-900: #1b5552;
+$color-lizard-green: #48BB78;
+$color-lizard-green-50: #b8e4ca;
+$color-lizard-green-100: #a1dcba;
+$color-lizard-green-200: #8bd4a9;
+$color-lizard-green-300: #75cc99;
+$color-lizard-green-400: #5ec388;
+$color-lizard-green-500: #48bb78;
+$color-lizard-green-600: #3ea66a;
+$color-lizard-green-700: #36905b;
+$color-lizard-green-800: #2d7a4d;
+$color-lizard-green-900: #25643f;
+$color-hot-pink: #ED64A6;
+$color-hot-pink-50: #fdedf5;
+$color-hot-pink-100: #fad2e5;
+$color-hot-pink-200: #f7b6d5;
+$color-hot-pink-300: #f39bc5;
+$color-hot-pink-400: #f07fb6;
+$color-hot-pink-500: #ed64a6;
+$color-hot-pink-600: #ea4996;
+$color-hot-pink-700: #e72d86;
+$color-hot-pink-800: #dc1a77;
+$color-hot-pink-900: #c01668;
+$color-cool-teal: #38B2AC;
+$color-cool-teal-50: #a1e2de;
+$color-cool-teal-100: #8adad6;
+$color-cool-teal-200: #73d3ce;
+$color-cool-teal-300: #5cccc6;
+$color-cool-teal-400: #44c4be;
+$color-cool-teal-500: #38b2ac;
+$color-cool-teal-600: #319b95;
+$color-cool-teal-700: #29837f;
+$color-cool-teal-800: #226c69;
+$color-cool-teal-900: #1b5552;
 
 :root {
-  --color-lizard green: #48BB78;
-  --color-lizard green-50: #b8e4ca;
-  --color-lizard green-100: #a1dcba;
-  --color-lizard green-200: #8bd4a9;
-  --color-lizard green-300: #75cc99;
-  --color-lizard green-400: #5ec388;
-  --color-lizard green-500: #48bb78;
-  --color-lizard green-600: #3ea66a;
-  --color-lizard green-700: #36905b;
-  --color-lizard green-800: #2d7a4d;
-  --color-lizard green-900: #25643f;
-  --color-hot pink: #ED64A6;
-  --color-hot pink-50: #fdedf5;
-  --color-hot pink-100: #fad2e5;
-  --color-hot pink-200: #f7b6d5;
-  --color-hot pink-300: #f39bc5;
-  --color-hot pink-400: #f07fb6;
-  --color-hot pink-500: #ed64a6;
-  --color-hot pink-600: #ea4996;
-  --color-hot pink-700: #e72d86;
-  --color-hot pink-800: #dc1a77;
-  --color-hot pink-900: #c01668;
-  --color-cool teal: #38B2AC;
-  --color-cool teal-50: #a1e2de;
-  --color-cool teal-100: #8adad6;
-  --color-cool teal-200: #73d3ce;
-  --color-cool teal-300: #5cccc6;
-  --color-cool teal-400: #44c4be;
-  --color-cool teal-500: #38b2ac;
-  --color-cool teal-600: #319b95;
-  --color-cool teal-700: #29837f;
-  --color-cool teal-800: #226c69;
-  --color-cool teal-900: #1b5552;
+  --color-primary: #48BB78;
+  --color-lizard-green: #48BB78;
+  --color-lizard-green-50: #b8e4ca;
+  --color-lizard-green-100: #a1dcba;
+  --color-lizard-green-200: #8bd4a9;
+  --color-lizard-green-300: #75cc99;
+  --color-lizard-green-400: #5ec388;
+  --color-lizard-green-500: #48bb78;
+  --color-lizard-green-600: #3ea66a;
+  --color-lizard-green-700: #36905b;
+  --color-lizard-green-800: #2d7a4d;
+  --color-lizard-green-900: #25643f;
+  --color-hot-pink: #ED64A6;
+  --color-hot-pink-50: #fdedf5;
+  --color-hot-pink-100: #fad2e5;
+  --color-hot-pink-200: #f7b6d5;
+  --color-hot-pink-300: #f39bc5;
+  --color-hot-pink-400: #f07fb6;
+  --color-hot-pink-500: #ed64a6;
+  --color-hot-pink-600: #ea4996;
+  --color-hot-pink-700: #e72d86;
+  --color-hot-pink-800: #dc1a77;
+  --color-hot-pink-900: #c01668;
+  --color-cool-teal: #38B2AC;
+  --color-cool-teal-50: #a1e2de;
+  --color-cool-teal-100: #8adad6;
+  --color-cool-teal-200: #73d3ce;
+  --color-cool-teal-300: #5cccc6;
+  --color-cool-teal-400: #44c4be;
+  --color-cool-teal-500: #38b2ac;
+  --color-cool-teal-600: #319b95;
+  --color-cool-teal-700: #29837f;
+  --color-cool-teal-800: #226c69;
+  --color-cool-teal-900: #1b5552;
 }
