Update code snippetes

--- a/packages/mirrorful/editor/src/main.css
+++ b/packages/mirrorful/editor/src/main.css
@@ -340,3 +340,9 @@ body {
 .primary-button:hover {
   background-color: var(--color-primary-hover);
 }
+
+.code-snippet {
+  border-radius: 8px;
+  padding: 8px;
+  font-size: 12px;
+}
