--- a/packages/mirrorful/editor/src/main.css
+++ b/packages/mirrorful/editor/src/main.css
@@ -346,3 +346,11 @@ body {
   padding: 8px;
   font-size: 12px;
 }
+
+.highlight-copy {
+  position: absolute;
+  display: inline;
+  right: 0;
+  top: 0;
+  margin: 7px;
+}
