refactoring nuxt-3 example

--- a/examples/nuxt-3/.mirrorful/theme.scss
+++ b/examples/nuxt-3/.mirrorful/theme.scss
@@ -1,19 +1,15 @@
-$color-nuxt-green: #09ed70;
-$color-nuxt-green-500: #09ed70;
-$color-blue: #0928ed;
-$color-blue-500: #0928ed;
-$color-red: #ed0946;
-$color-red-500: #ed0946;
-$color-orange: #ed9709;
-$color-orange-500: #ed9709;
+$color-brand: #09ed70;
+$color-brand-500: #09ed70;
+$color-secondary: #7d7c7c;
+$color-secondary-500: #7d7c7c;
+$color-primary: #171717;
+$color-primary-500: #171717;
 
 :root {
-  --color-nuxt-green: #09ed70;
-  --color-nuxt-green-500: #09ed70;
-  --color-blue: #0928ed;
-  --color-blue-500: #0928ed;
-  --color-red: #ed0946;
-  --color-red-500: #ed0946;
-  --color-orange: #ed9709;
-  --color-orange-500: #ed9709;
+  --color-brand: #09ed70;
+  --color-brand-500: #09ed70;
+  --color-secondary: #7d7c7c;
+  --color-secondary-500: #7d7c7c;
+  --color-primary: #171717;
+  --color-primary-500: #171717;
 }
