Update tailwind example

--- a/examples/tailwind-next/.mirrorful/theme.css
+++ b/examples/tailwind-next/.mirrorful/theme.css
@@ -10,17 +10,17 @@
   --color-purple-700: #7945e2;
   --color-purple-800: #662bdd;
   --color-purple-900: #5820ca;
-  --color-green: #e8ea7a;
-  --color-green-50: #fffffe;
-  --color-green-100: #fafbe4;
-  --color-green-200: #f6f7c9;
-  --color-green-300: #f1f2af;
-  --color-green-400: #edee94;
-  --color-green-500: #e8ea7a;
-  --color-green-600: #e3e660;
-  --color-green-700: #dfe245;
-  --color-green-800: #dadd2b;
-  --color-green-900: #c7ca20;
+  --color-yellow: #e8ea7a;
+  --color-yellow-50: #fffffe;
+  --color-yellow-100: #fafbe4;
+  --color-yellow-200: #f6f7c9;
+  --color-yellow-300: #f1f2af;
+  --color-yellow-400: #edee94;
+  --color-yellow-500: #e8ea7a;
+  --color-yellow-600: #e3e660;
+  --color-yellow-700: #dfe245;
+  --color-yellow-800: #dadd2b;
+  --color-yellow-900: #c7ca20;
   --color-red: #ea7a7a;
   --color-red-50: #fffefe;
   --color-red-100: #fbe4e4;
@@ -32,17 +32,17 @@
   --color-red-700: #e24545;
   --color-red-800: #dd2b2b;
   --color-red-900: #ca2020;
-  --color-green-2: #7aeabd;
-  --color-green-2-50: #feffff;
-  --color-green-2-100: #e4fbf1;
-  --color-green-2-200: #c9f7e4;
-  --color-green-2-300: #aff2d7;
-  --color-green-2-400: #94eeca;
-  --color-green-2-500: #7aeabd;
-  --color-green-2-600: #60e6b0;
-  --color-green-2-700: #45e2a3;
-  --color-green-2-800: #2bdd96;
-  --color-green-2-900: #20ca85;
+  --color-green: #7aeabd;
+  --color-green-50: #feffff;
+  --color-green-100: #e4fbf1;
+  --color-green-200: #c9f7e4;
+  --color-green-300: #aff2d7;
+  --color-green-400: #94eeca;
+  --color-green-500: #7aeabd;
+  --color-green-600: #60e6b0;
+  --color-green-700: #45e2a3;
+  --color-green-800: #2bdd96;
+  --color-green-900: #20ca85;
   --font-size-sm: 1rem;
   --font-size-md: 1.2rem;
   --font-size-lg: 1.4rem;
