--- a/examples/tailwind-next/.mirrorful/theme.scss
+++ b/examples/tailwind-next/.mirrorful/theme.scss
@@ -1,74 +1,96 @@
-$color-acme-inc-purple: #9f7aea;
-$color-acme-inc-purple-50: #fefeff;
-$color-acme-inc-purple-100: #ebe4fb;
-$color-acme-inc-purple-200: #d8c9f7;
-$color-acme-inc-purple-300: #c5aff2;
-$color-acme-inc-purple-400: #b294ee;
-$color-acme-inc-purple-500: #9f7aea;
-$color-acme-inc-purple-600: #8c60e6;
-$color-acme-inc-purple-700: #7945e2;
-$color-acme-inc-purple-800: #662bdd;
-$color-acme-inc-purple-900: #5820ca;
-$color-acme-inc-error-red: #ea7a92;
-$color-acme-inc-error-red-50: #fffefe;
-$color-acme-inc-error-red-100: #fbe4e9;
-$color-acme-inc-error-red-200: #f7c9d3;
-$color-acme-inc-error-red-300: #f2afbd;
-$color-acme-inc-error-red-400: #ee94a8;
-$color-acme-inc-error-red-500: #ea7a92;
-$color-acme-inc-error-red-600: #e6607c;
-$color-acme-inc-error-red-700: #e24567;
-$color-acme-inc-error-red-800: #dd2b51;
-$color-acme-inc-error-red-900: #ca2044;
-$color-acme-inc-blue: #7aeae2;
-$color-acme-inc-blue-50: #feffff;
-$color-acme-inc-blue-100: #e4fbf9;
-$color-acme-inc-blue-200: #c9f7f3;
-$color-acme-inc-blue-300: #aff2ee;
-$color-acme-inc-blue-400: #94eee8;
-$color-acme-inc-blue-500: #7aeae2;
-$color-acme-inc-blue-600: #60e6dc;
-$color-acme-inc-blue-700: #45e2d6;
-$color-acme-inc-blue-800: #2bddd1;
-$color-acme-inc-blue-900: #20cabe;
+$color-purple: #9F7AEA;
+$color-purple-50: #fefeff;
+$color-purple-100: #ebe4fb;
+$color-purple-200: #d8c9f7;
+$color-purple-300: #c5aff2;
+$color-purple-400: #b294ee;
+$color-purple-500: #9f7aea;
+$color-purple-600: #8c60e6;
+$color-purple-700: #7945e2;
+$color-purple-800: #662bdd;
+$color-purple-900: #5820ca;
+$color-yellow: #e8ea7a;
+$color-yellow-50: #fffffe;
+$color-yellow-100: #fafbe4;
+$color-yellow-200: #f6f7c9;
+$color-yellow-300: #f1f2af;
+$color-yellow-400: #edee94;
+$color-yellow-500: #e8ea7a;
+$color-yellow-600: #e3e660;
+$color-yellow-700: #dfe245;
+$color-yellow-800: #dadd2b;
+$color-yellow-900: #c7ca20;
+$color-red: #ea7a7a;
+$color-red-50: #fffefe;
+$color-red-100: #fbe4e4;
+$color-red-200: #f7c9c9;
+$color-red-300: #f2afaf;
+$color-red-400: #ee9494;
+$color-red-500: #ea7a7a;
+$color-red-600: #e66060;
+$color-red-700: #e24545;
+$color-red-800: #dd2b2b;
+$color-red-900: #ca2020;
+$color-green: #7aeabd;
+$color-green-50: #feffff;
+$color-green-100: #e4fbf1;
+$color-green-200: #c9f7e4;
+$color-green-300: #aff2d7;
+$color-green-400: #94eeca;
+$color-green-500: #7aeabd;
+$color-green-600: #60e6b0;
+$color-green-700: #45e2a3;
+$color-green-800: #2bdd96;
+$color-green-900: #20ca85;
 $font-size-sm: 1rem;
 $font-size-md: 1.2rem;
 $font-size-lg: 1.4rem;
 
 :root {
-  --color-acme-inc-purple: #9f7aea;
-  --color-acme-inc-purple-50: #fefeff;
-  --color-acme-inc-purple-100: #ebe4fb;
-  --color-acme-inc-purple-200: #d8c9f7;
-  --color-acme-inc-purple-300: #c5aff2;
-  --color-acme-inc-purple-400: #b294ee;
-  --color-acme-inc-purple-500: #9f7aea;
-  --color-acme-inc-purple-600: #8c60e6;
-  --color-acme-inc-purple-700: #7945e2;
-  --color-acme-inc-purple-800: #662bdd;
-  --color-acme-inc-purple-900: #5820ca;
-  --color-acme-inc-error-red: #ea7a92;
-  --color-acme-inc-error-red-50: #fffefe;
-  --color-acme-inc-error-red-100: #fbe4e9;
-  --color-acme-inc-error-red-200: #f7c9d3;
-  --color-acme-inc-error-red-300: #f2afbd;
-  --color-acme-inc-error-red-400: #ee94a8;
-  --color-acme-inc-error-red-500: #ea7a92;
-  --color-acme-inc-error-red-600: #e6607c;
-  --color-acme-inc-error-red-700: #e24567;
-  --color-acme-inc-error-red-800: #dd2b51;
-  --color-acme-inc-error-red-900: #ca2044;
-  --color-acme-inc-blue: #7aeae2;
-  --color-acme-inc-blue-50: #feffff;
-  --color-acme-inc-blue-100: #e4fbf9;
-  --color-acme-inc-blue-200: #c9f7f3;
-  --color-acme-inc-blue-300: #aff2ee;
-  --color-acme-inc-blue-400: #94eee8;
-  --color-acme-inc-blue-500: #7aeae2;
-  --color-acme-inc-blue-600: #60e6dc;
-  --color-acme-inc-blue-700: #45e2d6;
-  --color-acme-inc-blue-800: #2bddd1;
-  --color-acme-inc-blue-900: #20cabe;
+  --color-purple: #9F7AEA;
+  --color-purple-50: #fefeff;
+  --color-purple-100: #ebe4fb;
+  --color-purple-200: #d8c9f7;
+  --color-purple-300: #c5aff2;
+  --color-purple-400: #b294ee;
+  --color-purple-500: #9f7aea;
+  --color-purple-600: #8c60e6;
+  --color-purple-700: #7945e2;
+  --color-purple-800: #662bdd;
+  --color-purple-900: #5820ca;
+  --color-yellow: #e8ea7a;
+  --color-yellow-50: #fffffe;
+  --color-yellow-100: #fafbe4;
+  --color-yellow-200: #f6f7c9;
+  --color-yellow-300: #f1f2af;
+  --color-yellow-400: #edee94;
+  --color-yellow-500: #e8ea7a;
+  --color-yellow-600: #e3e660;
+  --color-yellow-700: #dfe245;
+  --color-yellow-800: #dadd2b;
+  --color-yellow-900: #c7ca20;
+  --color-red: #ea7a7a;
+  --color-red-50: #fffefe;
+  --color-red-100: #fbe4e4;
+  --color-red-200: #f7c9c9;
+  --color-red-300: #f2afaf;
+  --color-red-400: #ee9494;
+  --color-red-500: #ea7a7a;
+  --color-red-600: #e66060;
+  --color-red-700: #e24545;
+  --color-red-800: #dd2b2b;
+  --color-red-900: #ca2020;
+  --color-green: #7aeabd;
+  --color-green-50: #feffff;
+  --color-green-100: #e4fbf1;
+  --color-green-200: #c9f7e4;
+  --color-green-300: #aff2d7;
+  --color-green-400: #94eeca;
+  --color-green-500: #7aeabd;
+  --color-green-600: #60e6b0;
+  --color-green-700: #45e2a3;
+  --color-green-800: #2bdd96;
+  --color-green-900: #20ca85;
   --font-size-sm: 1rem;
   --font-size-md: 1.2rem;
   --font-size-lg: 1.4rem;
