--- a/packages/blocks/src/index.css
+++ b/packages/blocks/src/index.css
@@ -19,10 +19,14 @@
 
   --background-color-primary: #ffffff;
   --background-color-secondary: #ffffff;
+  --color-background-accent: rgba(240, 240, 240, 0.5);
+  --color-background-accent-hover: rgba(240, 240, 240, 0.8);
   --text-color-primary: #ffffff;
   --text-color-secondary: #ffffff;
   --border-color: #303030;
   --color-shadow: #d3d3d3;
+
+  --color-error: #e53e3e;
 
   /* Inputs */
   --color-input-border: rgba(0, 0, 0, 0.16);
@@ -50,11 +54,15 @@ html[data-theme='light'] {
 
   --background-color-primary: #ffffff;
   --background-color-secondary: #f5f5f5;
+  --color-background-accent: rgba(240, 240, 240, 0.5);
+  --color-background-accent-hover: rgba(240, 240, 240, 0.8);
   --text-color-primary: #000000;
   --text-color-secondary: #808080;
   --border-color: #303030;
   --border-hover-color: #030303;
   --color-shadow: #d3d3d3;
+
+  --color-error: #e53e3e;
 
   /* Inputs */
   --color-input-border: rgba(0, 0, 0, 0.16);
@@ -81,11 +89,16 @@ html[data-theme='dark'] {
 
   --background-color-primary: #10121c;
   --background-color-secondary: #171a22;
+  --color-background-accent: rgba(0, 0, 0, 0.5);
+  --color-background-accent-hover: rgba(0, 0, 0, 0.8);
+
   --text-color-primary: #ffffff;
   --text-color-secondary: #b0b0b0;
   --border-color: #c0c0c0;
   --border-hover-color: #ffffff;
   --color-shadow: #6f6f6f;
+
+  --color-error: #e53e3e;
 
   /* Inputs */
   --color-input-border: rgba(255, 255, 255, 0.16);
